<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_view_data"
            android:icon="@mipmap/ic_search"
            android:title="@string/view_data" />
        <item
        android:id="@+id/nav_device"
        android:icon="@mipmap/ic_device_mobile"
        android:title="@string/device" />

        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting" />
    </group>

    <item android:title="">
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/logout" />
    </item>

</menu>
