<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfe6fa"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <!-- Row 1 with single column -->
    <!--<TableRow-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_span="3"-->
            <!--android:background="#007fad"-->
            <!--android:gravity="center"-->
            <!--android:text="LICH TUAN 16"-->
            <!--android:textColor="#fff"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="18dp" />-->
    <!--</TableRow>-->

    <!-- Row 2 with 3 columns -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_tempture"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="#555555" />
            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_humidity"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="#555555" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_pressure"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="#555555" />
            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/border"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_sun"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/light_intensity"
                android:textColor="#555555" />
            <TextView
                android:id="@+id/tvLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_heat_index"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/heat_index"
                android:textColor="#555555" />
            <TextView
                android:id="@+id/tvHeatIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_dew_point"
                android:textStyle="bold"
                android:textColor="#527b35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dew_point"
                android:textColor="#555555" />
            <TextView
                android:id="@+id/tvDewPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="----"
                android:textColor="#555555" />
        </LinearLayout>
    </TableRow>

</TableLayout>